End of Vanilla Javascript Smooth Scroll Tutorial

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <div class="box1">
     <a class="section1" href="#">Bring me down</a>
   </div>
-  <div class="box2"></div>
+  <div class="box2">
+    <a class="section2" href="#">Thank</a>
+    <img src="dog.jpg" alt="dog">
+  </div>
+  <script src="./app.js"></script>
 </body>
 </html>
+
+<!-- https://www.youtube.com/watch?v=oUSvlrDTLi4 -->
